[FIX] Fix issue with background gradient not rendering on mobile

--- a/src/client/react/scss/_description.scss
+++ b/src/client/react/scss/_description.scss
@@ -34,7 +34,8 @@
 	$detail-height-xxs: 34rem;
 
 	.details {
-
+		background: linear-gradient(to bottom, transparent 0%, rgba(0,0,0,0.6) 40%, rgba(0,0,0,0.8) 100%);
+		
 		&, &::before {
 			height: $detail-height-l;
 			
@@ -53,15 +54,6 @@
 			@media (max-width: $bp-xxs) {
 				height: $detail-height-xxs;
 			}
-		}
-
-		&::before {
-			content: '';
-			position: absolute;
-			left: 0;
-			width: 100%;
-			background: linear-gradient(to bottom, transparent 0%, black 100%);
-			z-index: -1;
 		}
 
 		div {
